# researchforme

./: .env.example  .gitignore  .mcp.json  AUDIT.md  DESIGN.md  MORNING-REPORT.md  OVERNIGHT-PROMPT.md  PARITY.md  PRODUCT.md  README.md  SPEC-AUTONOMOUS.md  WORKLOG.md  justfile
backend/: pyproject.toml
backend/app/: apiclient.py  cache.py  cli.py  config.py  library.py  main.py  mcp_server.py  pipeline.py  schemas.py  treeview.py
backend/app/analysis/: extract.py  rank.py  scope.py  synthesize.py
backend/app/autonomous/: autofit.py  consolidate.py  develop.py  diff.py  digest.py  engine.py  evolve.py  fit.py  governor.py  graveyard.py  improve.py  intake.py  novelty.py  portfolio.py  preferences.py  pressure.py  scout.py  (+10 more)
backend/tests/: test_arxiv_query.py  test_assistant_project.py  test_autofit.py  test_autonomous.py  test_dedup_and_novelty.py  test_digest_researchpack.py  test_diversity.py  test_domain_anchor.py  test_evolve.py  test_fixture_contamination.py  test_fixture_firewall.py  test_fixture_provenance.py  test_funding_extraction.py  test_graveyard.py  test_grounding.py  test_library.py  test_library_import.py  test_mode_collapse.py  test_new_adapters.py  test_niche_scope_and_freshness.py  test_novelty.py  test_pipeline.py  test_preferences.py  test_project_critique.py  test_recombine.py  test_rerun_diff_portfolio.py  test_scout.py  test_semantic_dedup.py  test_sensors.py  test_shutdown.py  test_stackexchange.py  test_starred.py  test_unmeasured_verdict.py  test_usage_persistence.py  test_user_star.py  test_valuemodel.py  test_watch.py  test_web_search.py
(+150 files in other folders)
